force-app/main/default/objects/Consultation__c/Consultation__c.object-meta.xml
<CustomObject>
    <description>Consultation records for Social Events — tracks meetings, notes, and next steps</description>
    <label>Consultation</label>
    <nameField>
        <displayFormat>CON-{0000}</displayFormat>
        <label>Consultation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consultations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>