force-app/main/default/objects/Consultation__c/fields/Budget_Signals__c.field-meta.xml
<CustomField>
    <fullName>Budget_Signals__c</fullName>
    <label>Budget Signals</label>
    <type>TextArea</type>
</CustomField>