force-app/main/default/objects/Consultation__c/fields/Clients_Present__c.field-meta.xml
<CustomField>
    <fullName>Clients_Present__c</fullName>
    <label>Clients Present</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Client</fullName>
            </value>
            <value>
                <fullName>Secondary Client</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>