force-app/main/default/objects/Consultation__c/fields/Concerns__c.field-meta.xml
<CustomField>
    <fullName>Concerns__c</fullName>
    <description>Surfaced on Event record for assigned team</description>
    <label>Concerns / Sensitivities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>