force-app/main/default/objects/Consultation__c/fields/Consultation_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Consultation_DateTime__c</fullName>
    <label>Consultation Date &amp; Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>