force-app/main/default/objects/Consultation__c/fields/Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coordinator</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Social</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Sales</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Consultations</relationshipName>
    <type>Lookup</type>
</CustomField>