force-app/main/default/objects/Consultation__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Social Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Consultations</relationshipLabel>
    <relationshipName>Consultations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>