force-app/main/default/objects/Consultation__c/fields/Key_Themes__c.field-meta.xml
<CustomField>
    <fullName>Key_Themes__c</fullName>
    <label>Key Themes &amp; Preferences</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>